Add a note "editor"

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,7 @@
 <div class="layout">
   <header>ASPular Notes</header>
   <nav>Nav</nav>
-  <div class="main-wrapper">Main</div>
+  <div class="main-wrapper">
+    <app-note-editor [note_data]="current_note()"/>
+  </div>
 </div>
