Move notes to a service.

--- a/src/app/note-editor/note-editor.html
+++ b/src/app/note-editor/note-editor.html
@@ -1,7 +1,7 @@
 <header>
-  <input type="text" [value]="note_data().title"/>
+  <input type="text" [value]="note?.title"/>
 </header>
 
 <main>
-  {{ note_data().content }}
+  {{ note?.content }}
 </main>
