--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <div class="layout">
   <header>ASPular Notes</header>
-  <app-note-list [notes]="notes()"></app-note-list>
+  <app-note-list/>
   <div class="main-wrapper">
-    <app-note-editor [note_data]="notes()[0]"/>
+    <app-note-editor/>
   </div>
 </div>
