--- a/src/app/note-list/note-list.html
+++ b/src/app/note-list/note-list.html
@@ -1,6 +1,6 @@
 <nav>
   @for (note of notes; track note.id) {
-    <article>
+    <article [routerLink]="[`/note/${note.id}`]">
       <h4>{{ note.title }}</h4>
       <p>{{ note.content }}</p>
     </article>
