--- a/src/app/note-list/note-list.css
+++ b/src/app/note-list/note-list.css
@@ -1,20 +1,3 @@
-nav {
-  height: 100%;
-
-  backdrop-filter: blur(5px);
-
-  border-right: 1px var(--border-color) solid;
-  margin-right: 5em;
-
-  display: flex;
-  flex-direction: column;
-  gap: 1em;
-
-  padding: 1em;
-
-  /* TODO: Overflows */
-}
-
 article {
   background: white;
 
@@ -23,6 +6,10 @@ article {
 
   max-height: 8em;
   overflow-y: hidden;
+
+  border: 1px var(--highligh-color) solid;
+
+  cursor: pointer;
 }
 
 h4 {
