--- a/src/app/note-list/note-list.html
+++ b/src/app/note-list/note-list.html
@@ -1,6 +1,8 @@
-@for (note of notes; track note.id) {
-  <article [routerLink]="[`/note/${note.id}`]">
-    <h4>{{ note.title }}</h4>
-    <p>{{ note.content }}</p>
-  </article>
+@if (notes.hasValue()) {
+  @for (note of notes.value(); track note.id) {
+    <article [routerLink]="[`/note/${note.id}`]">
+      <h4>{{ note.title }}</h4>
+      <p>{{ note.content }}</p>
+    </article>
+  }
 }
