Add note creation.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <div class="layout">
   <header><a [routerLink]="['/']">ASPular Notes</a></header>
   <nav>
+    <button (click)="newNote()">+</button>
     <!-- TODO: Hide when the front page is displayed? -->
     <app-note-list style="display: contents"/>
   </nav>
