Add a button for deleting notes.

--- a/src/app/note-editor/note-editor.html
+++ b/src/app/note-editor/note-editor.html
@@ -8,6 +8,10 @@
   }
 </header>
 
+<div class="controls">
+  <button (click)="deleteNote()">Delete Note</button>
+</div>
+
 <main [attr.data-replicated-value]="note()?.content">
   @if (note() !== null) {
     <textarea (input)="queueUpdateNote($event)" [field]="noteForm.content"></textarea>
