Feed the list of notes to notelist as an input

--- a/src/app/front-page/front-page.html
+++ b/src/app/front-page/front-page.html
@@ -1,5 +1,5 @@
 <header>Your Notes</header>
 
 <main>
-  <app-note-list style="display: contents"/>
+  <app-note-list [notes]="this.notes.value()" style="display: contents"/>
 </main>
