First pass on the front page toolbar.

--- a/src/app/front-page/front-page.html
+++ b/src/app/front-page/front-page.html
@@ -3,7 +3,9 @@
 </header>
 
 <div class="toolbar">
-  <input [(ngModel)]="searchText">
+  <div class="input-bottom-border-wrapper">
+    <input [(ngModel)]="searchText" placeholder="Search your notes (#tag for tags)">
+  </div>
 </div>
 
 <main>
