--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,7 +8,7 @@
   --border-color: black;
 
   --highlight-text-color: white;
-  --highligh-color: mediumpurple;
+  --highlight-color: mediumpurple;
 
   --text-color: black;
   --text-color-inactive: #444;
@@ -69,7 +69,7 @@
 
     background: #eee;
 
-    border-bottom: 1px solid var(--highligh-color);
+    border-bottom: 1px solid var(--highlight-color);
 
     input {
       height: 100%;
@@ -93,7 +93,7 @@
       padding: 0 1ch;
 
       &:hover, &:focus, &:active {
-        background: var(--highligh-color);
+        background: var(--highlight-color);
         color: white;
       }
     }
@@ -109,7 +109,7 @@
   $border-width: 3px;
 
   &:focus-within {
-    border-bottom: $border-width solid var(--highligh-color);
+    border-bottom: $border-width solid var(--highlight-color);
 
     input {
       padding-top: $border-width;
