First pass on the note previews.

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,7 +1,7 @@
 .layout {
   display: grid;
 
-  grid-template-columns: 1fr 3fr 1fr;
+  grid-template-columns: 20% 60% 20%;
   grid-template-rows: min-content 1fr;
 
   background-image: url("/galaxy.webp");
