--- a/src/app/sidebar/sidebar.scss
+++ b/src/app/sidebar/sidebar.scss
@@ -14,3 +14,14 @@ nav {
 
   /* TODO: Overflows */
 }
+
+button {
+  display: flex;
+  justify-content: center;
+
+  padding: .5em 0;
+  border: none;
+  border-radius: var(--border-radius-size);
+
+  font-weight: bold;
+}
