Underline the title of the hovered note.

--- a/src/app/note-list/note-list.scss
+++ b/src/app/note-list/note-list.scss
@@ -8,6 +8,12 @@ article {
   border: 1px var(--header-bg) solid;
 
   cursor: pointer;
+
+  &:hover {
+    header {
+      text-decoration: underline;
+    }
+  }
 }
 
 header {
