--- a/src/app/sidebar/sidebar.scss
+++ b/src/app/sidebar/sidebar.scss
@@ -1,18 +1,23 @@
 nav {
-  height: 100%;
+  min-height: 100%;
 
   backdrop-filter: blur(5px);
 
   border-right: 1px var(--border-color) solid;
   margin-right: 5em;
+}
 
+h2 {
+  text-align: center;
+  padding: .5em 0;
+}
+
+.note-list {
   display: flex;
   flex-direction: column;
   gap: 1em;
 
   padding: 1em;
-
-  /* TODO: Overflows */
 }
 
 button {
